feat: refactor and simplify api endpoints
