# apps/webapi/api/auth/routes.go
@@ -1,4 +1,4 @@
-package credentials
+package auth
 
 import (
 	"github.com/gofiber/fiber/v2"
