# apps/webapi/api/feedback/create_feedback.go
@@ -6,17 +6,20 @@ import (
 	"provar.se/webapi/lib/token"
 )
 
-// @Summary			Creates a new feedback
-// @Description	Creates a new feedback for the organization.
-// @Tags				feedbacks
-// @Accept			json
-// @Param       organization_id   path	string	6541eba0b8857ce9f394cf7e	"Organization ID"
-// @Success			204			"ok"
-// @Router			/organization/{organization_id}/feedback 	[post]
+// @Router      /feedback  [post]
+// @Summary     Create a new feedback event for an organization.
+// @Description Create a new feedback event for an organization.
+// @Tags        feedback
+// @Accept      json
+// @Param       x-organization  path  string  6541eba0b8857ce9f394cf7e  "Organization ID"
+// @Success     204  "ok"
 func SetupCreateFeedback(app *fiber.App) {
-	app.Use("/organization/:organization_id/feedback", token.GetMiddleware())
-	app.Post("/organization/:organization_id/feedback", func(c *fiber.Ctx) error {
-		organizationID := c.Params("organization_id")
+	app.Use("/feedback", token.GetMiddleware())
+	app.Post("/feedback", func(c *fiber.Ctx) error {
+		organizationID := string(c.Request().Header.Peek("x-organization"))
+		if organizationID == "" {
+			return c.SendStatus(fiber.StatusBadRequest)
+		}
 		repo := repository.GetFeedbackRepository()
 		err := repo.CreateFeedback(organizationID)
 		if err != nil {
